vs-ml-pipeline.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ml-pipeline
  namespace: kubeflow
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /pipeline
      rewrite:
        uri: /
      route:
        - destination:
            host: ml-pipeline.kubeflow.svc.cluster.local
            port:
              number: 8888
